2007-01-02 Werner Hoch <werner.ho@gmx.de>

	* src/o_picture.c: picture_selection_dialog() replaced the
          GtkFileSelection dialog with a GtkFileChooserDialog

	* src/x_script.c: replaced the GtkFileSelection dialog with a
	  GtkFileChooserDialog

	* src/x_log.c: insert text at the end of the buffer instead of cursor
	  position. Replaced gtk_text_view_scroll_to_iter() with
	  gtk_text_view_scroll_to_mark() which works more reliable.

2006-12-31 Werner Hoch <werner.ho@gmx.de>

	* src/x_autonumber.c: fixed a bug if one searchtext is a subset
	  of another one. Bug reported by Levente Kovacs.

2006-12-29 Werner Hoch <werner.ho@gmx.de>

	* src/x_mulitattrib.c: added transient_for flag to the dialog.
	  Suggested by Kurt Peters

2006-12-28 Werner Hoch <werner.ho@gmx.de>

	* src/x_image.c: replaced the browse button with an icon.
	  Misc cosmetics.

	* src/x_autonumber.c: switched the autonumber dialog to GtkDialog,
	  fixed a bug when unselecting the "remove numbers" CheckButton

2006-12-26 Carlos Nieves Onega <cnieves@iespana.es>

	* lib/system-gschemrc.in: Don't place the titleblock automatically if
	  editing a symbol file (page filename ending in ".sym").

2006-12-23 Carlos Nieves Onega <cnieves@iespana.es>

	* src/g_hook.c (g_add_component): Return if scm_comp_name is 
	  an empty list (guile's NULL), or the scheme's boolean false.
	  This was suggested by Peter TB Brett and Steve Tell.

	* src/g_hook.c (g_add_component): 
	  Changed the end of this function to avoid the "Statement not reached"
	  compiler warning. Thanks to Dan McMahill for reporting this.

2006-12-22 Carlos Nieves Onega <cnieves@iespana.es>

	* src/g_hook.c: 
	  -  Added some documentation to custom_world_get_complex_bounds and
	     g_get_object_bounds.
	  -  g_add_component: Changed the remaining scheme function's name
	     left on 2006-12-14.

2006-12-21 Peter Brett   <peter@peter-b.co.uk>

	* src/o_copy.c, o_find.c, x_event.c: Update interface of