@@ -1,5 +1,9 @@
 2007-01-02 Werner Hoch <werner.ho@gmx.de>
 
+	* src/o_picture.c: picture_change_selection_dialog() replaced
+          GtkFileSelection dialog with a GtkFileChooserDialog. Refactored
+	  and renamed the callback function.
+
 	* src/o_picture.c: picture_selection_dialog() replaced the
           GtkFileSelection dialog with a GtkFileChooserDialog
 
